fix bug on articles heading causing overlap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -430,4 +430,10 @@ li{
         margin-bottom: 15px;
     }
 }
+
+@media only screen and (max-width: 320px){
+    .articles-heading{
+        margin-top: 50px;
+    }
+}
   
